--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <!-- ✅ Navigation Bar -->
+    <!--  Navigation Bar -->
     <header class="nav">
         <div class="name">
             <span>Sachin.</span>
@@ -37,7 +37,7 @@
         </div>
     </header>
 
-    <!-- ✅ Home Section -->
+    <!--  Home Section -->
     <section id="home">
         <div class="me-info">
             <h1>SACHIN <span>KUMAR</span></h1>
@@ -57,7 +57,7 @@
 
 
 
-    <!-- ✅ About Section -->
+    <!--  About Section -->
     <section id="about">
         <h2>Who Am <span>I</span>?</h2>
         <div class="about-section">
@@ -152,7 +152,7 @@
         <h2>My <span>Projects</span></h2>
         <div class="project-grid">
 
-            <!-- Mehfil – Music Player -->
+    <!-- Mehfil – Music Player -->
             <div class="project-card">
                 <img src="asset/mehfil.png" alt="Mehfil Music Player" class="project-img" />
                 <div class="project-content">
@@ -172,7 +172,7 @@
                 </div>
             </div>
 
-            <!-- JoSAA & CSAB College Predictor -->
+      <!-- JoSAA & CSAB College Predictor -->
             <div class="project-card">
                 <img src="asset/college-predictor.png" alt="JoSAA College Predictor" class="project-img" />
                 <div class="project-content">
@@ -192,7 +192,7 @@
                 </div>
             </div>
 
-            <!-- BPSC Study Material WebApp -->
+      <!-- BPSC Study Material WebApp -->
             <div class="project-card">
                 <img src="asset/BPSC-StudyMaterial.png" alt="BPSC Study Material App" class="project-img" />
                 <div class="project-content">
@@ -212,9 +212,9 @@
                 </div>
             </div>
 
-            <!-- NCERT Books Organizer -->
+     <!-- NCERT Books Organizer -->
             <div class="project-card">
-                <img src="ASSET/ncert-books.png" alt="NCERT Books Organizer" class="project-img" />
+                <img src="asset/NCERT-books.png" alt="NCERT Books Organizer" class="project-img" />
                 <div class="project-content">
                     <h3>NCERT Books Organizer</h3>
                     <p>Online repository of NCERT books (Class 7–12) sorted by class and subject with fast Google Drive
@@ -232,9 +232,9 @@
                 </div>
             </div>
 
-            <!-- SAM – Smart Assistant Model -->
+    <!-- SAM – Smart Assistant Model -->
             <div class="project-card">
-                <img src="asset/sam.png" alt="SAM – Sachin Artistic Mind" class="project-img" />
+                <img src="asset/SAM.png" alt="SAM – Sachin Artistic Mind" class="project-img" />
                 <div class="project-content">
                     <h3>SAM</h3>
                     <p> A personal creative suite that blends multiple passion projects into one interactive platform.
